2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GapBuffer.cs:
	* SyntaxModes/DiffSyntaxMode.xml:
	* SyntaxModes/MakefileSyntaxMode.xml:
	* SyntaxModes/ChangeLogSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting.Regex/Regex.cs:
	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs: Tried to
	  speed up highlighting.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSegment.cs: fixed 'regression Bug 615624
	  - Pressing DOWN after RETURN moves cursor to beginning of
	  blank lines instead of to the indent'.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed
	  highlighting bug.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSegment.cs: fix build.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor/FoldingScreenbackgroundRenderer.cs: Tweaked
	  text editor performance.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Optimized
	  highlighting thread.

2010-07-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/SimpleEditMode.cs: 

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Added SetCaretTo
	  delegation.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: SelectionRange is now
	  always != null.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorData.cs: Added some delegation
	  methods to the texteditordata to make its usage easier -
	  moved the advanced setcaret (with highlight & pulse) to the
	  texteditor.

2010-07-18  Mike Krüger  <mkrueger@novell.com>
